# configuration.nix

./: .editorconfig  .envrc  .gitignore  .renovaterc.json  .typos.toml  LICENSE  README.md  flake.nix  fmt.nix  justfile  lint.nix  options.nix  renovate.json  typos.nix
.forgejo/workflows/: check.yml  renovate.yml
.github/workflows/: check.yml  deploy.yaml  deploy.yml
ci-scripts/: report-size.sh
configuration/: default.nix
configuration/gui/: default.nix
docs/: book.toml  default.nix
docs/src/: SUMMARY.md  configuration-overview.md  home-options.md  nixos-options.md  nvim-options.md  options.md
example-hm/: home.nix
example-vm/: default.nix  vm-config.nix
flake-modules/: checks.nix  default.nix  devshells.nix  docs.nix  example-configs.nix  example-vm.nix  home-modules.nix  nixos-modules.nix  nixvim-modules.nix  nvim.nix  overlays.nix  scripts.nix
home/: default.nix  options.nix  users.nix
home/gui/: default.nix  keybindings.nix  sway-config.nix  waybar-settings.nix
module/: default.nix  stylix-config.nix
modules/: lib.nix
nixos/: default.nix  options.nix  stylix-config.nix
nvim/: augroups.nix  default.nix  dev-plugins.nix  mappings.nix  nixvim.nix  options.nix  plugins.nix  standalone.nix  vim-jjdescription.nix
scripts/: default.nix
scripts/audiomenu/: Cargo.toml  audiomenu.py  package.nix  pyproject.toml
scripts/audiomenu/src/: main.rs
scripts/jpassmenu/: .envrc  Cargo.toml  README.md  jpassmenu.py  package.nix  pyproject.toml
scripts/jpassmenu/src/: main.rs
system/: default.nix  options.nix  stylix-config.nix
(+55 files in other folders)
