[package]
name = "audiomenu"
description = "fuzzel script to select the default audio device for pipewire+wireplumber"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive", "env"] }
duct = "0.13.7"
miette = { version = "7.4.0", features = ["fancy"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

[profile.release]
panic = "abort"
opt-level = 's'
lto = true
