[package]
name = "jpassmenu"
description = "A simple program that uses dmenu compatible menu to select a password to type/copy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive", "env"] }
duct = "1.0.0"
env_logger = "0.11.5"
ignore = "0.4.23"
log = "0.4.22"
miette = { version = "7.4.0", features = ["fancy"] }

[profile.release]
lto = true
opt-level = "s"
panic = "abort"
strip = true
